--- a/frontend/src/components/sidebar/style.css
+++ b/frontend/src/components/sidebar/style.css
@@ -1,46 +1,45 @@
 .sidebar {
-    width: 250px;
-    background-color: #050d17; /* dark navy blue */
-    height: 100vh;
-    padding: 20px;
-    color: white;
-  }
-  
-  .sidebar h3 {
-    margin-bottom: 30px;
-    color: white;
-  }
-  
-  .sidebar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .sidebar li {
-    margin-bottom: 15px;
-  }
-  
-  .sidebar a {
-    display: flex;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 6px;
-    transition: background-color 0.3s;
-  }
-  
-  .sidebar a:hover {
-    background-color: #1884f0; /* hover background */
-  }
-  
-  .sidebar a.active {
-    background-color: #1884f0; /* selected menu item background */
-  }
-  
-  .sidebar-icon {
-    margin-right: 10px;
-    font-size: 18px;
-  }
-  
+  width: 250px;
+  background-color: #050d17; /* dark navy blue */
+  height: 100vh;
+  padding: 20px;
+  color: white;
+}
+
+.sidebar h3 {
+  margin-bottom: 30px;
+  color: white;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar li {
+  margin-bottom: 15px;
+}
+
+.sidebar a {
+  display: flex;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 6px;
+  transition: background-color 0.3s;
+}
+
+.sidebar a:hover {
+  background-color: #b6c7d8; /* hover background */
+}
+
+.sidebar a.active {
+  background-color: #1884f0; /* selected menu item background */
+}
+
+.sidebar-icon {
+  margin-right: 10px;
+  font-size: 18px;
+}
