--- a/frontend/src/pages/employeeProfile/style.css
+++ b/frontend/src/pages/employeeProfile/style.css
@@ -79,6 +79,7 @@ h2 {
   display: flex;
   flex-direction: column;
   margin-bottom: 12px;
+  width: 350px;
 }
 
 .input-group label {
@@ -181,4 +182,19 @@ textarea {
   cursor: pointer;
   display: block;
   margin: auto;
+}
+
+.dashboard-left {
+  flex: 1;
+  margin-bottom: 30px;
+}
+
+.dashboard-title {
+  margin: 0;
+  font-size: 24px;
+}
+
+.dashboard-subtitle {
+  margin: 5px 0 0 0;
+  color: #6b7280; /* gray-500 */
 }
