performance review pdf download logic done

--- a/frontend/src/pages/PerformanceReview/style.css
+++ b/frontend/src/pages/PerformanceReview/style.css
@@ -167,11 +167,15 @@
 .custom-slider .MuiSlider-thumb {
   background-color: #3498db;
 }
- 
+
 .custom-slider .MuiSlider-track {
   background-color: #3498db;
 }
- 
+
 .custom-slider .MuiSlider-rail {
   background-color: rgb(110, 160, 240); /* optional */
+}
+
+#pdf-report {
+  background-color: #fff;
 }
